--- a/projects/viewer/src/modules/post/pages/post-list/community/post-community.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/community/post-community.component.html
@@ -20,16 +20,16 @@
             <tr>
               <th> 제목 </th>
               <th width="140"> 글쓴이 </th>
-              <th width="130"> 조회수 </th>
-              <th width="130"> 좋아요수 </th>
+              <th width="130"> <i class="fa fa-eye font-weight-light"></i> </th>
+              <th width="130"> <i class="fa fa-thumbs-up font-weight-light"></i> </th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let post of posts">
               <td> <a [routerLink]="[post.post_id]"> {{post.title}} </a> </td>
               <td> {{post.author.name}} </td>
-              <td> {{post.views}} </td>
-              <td> {{post.likes}} </td>
+              <td> <i class="fa fa-eye font-weight-light"></i> {{post.views}} </td>
+              <td> <i class="fa fa-thumbs-up font-weight-light"></i> {{post.likes}} </td>
             </tr>
             </tbody>
           </table>
