--- a/projects/viewer/src/theme/froala-theme.scss
+++ b/projects/viewer/src/theme/froala-theme.scss
@@ -1071,6 +1071,7 @@
     }
   }
   &.fr-toolbar {
+    z-index: 1;
     color: #222222;
     background: #ffffff;
     font-family: 'Nanum Gothic', 'open sans', 'Helvetica Neue', Helvetica, sans-serif;
