--- a/projects/viewer/src/modules/post/pages/post-write/video/post-video-write.component.html
+++ b/projects/viewer/src/modules/post/pages/post-write/video/post-video-write.component.html
@@ -1,13 +1,14 @@
 <section class="post-write bg-white h-100">
-  <form class="form h-100">
+  <form class="form h-100" #form="ngForm" (ngSubmit)="submit(form)">
     <div class="row h-100 mx-0">
       <div class="col-8 px-0 write-form">
         <div class="title">
-          <input type="text" class="w-100" placeholder="제목을 입력해주세요">
+          <input type="text" id="title" name="title" class="w-100" placeholder="제목을 입력해주세요"
+                 required [(ngModel)]="post.title">
         </div>
 
         <div class="description">
-          <div [froalaEditor]="options" [(froalaModel)]="post.description"></div>
+          <div [froalaEditor]="options" [(froalaModel)]="post.content"></div>
         </div>
       </div>
       <div class="col px-0 border-left">
@@ -16,8 +17,7 @@
           <div class="youtube-form">
             <input type="text" class="form-control"
                    placeholder="https://www.youtube.com/watch?v=..."
-                   ngModel (ngModelChange)="onChangeYoutubeURL($event)"
-                   [ngModelOptions]="{standalone: true}">
+                   [ngModel]="post.youtubeUrl" (ngModelChange)="onChangeYoutubeURL($event)">
             <div class="youtube-thumbnail" *ngIf="currentYoutubeVideoId">
               <img [src]="'https://img.youtube.com/vi/' + currentYoutubeVideoId + '/mqdefault.jpg'">
             </div>
@@ -33,7 +33,7 @@
 
           <div class="tags-container">
             <div class="tags">
-              <label class="label tag" *ngFor="let tag of tags; let i = index">
+              <label class="label tag" *ngFor="let tag of post.tags; let i = index">
                 {{tag}}
                 <i class="fa fa-times" (click)="removeTag(i)"></i>
               </label>
