fix: convert naming of properties to underscore

--- a/projects/prototype/src/modules/post/components/post-sheet/post-sheet.component.html
+++ b/projects/prototype/src/modules/post/components/post-sheet/post-sheet.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex p-4 border-bottom">
   <div class="artist-img pr-4 border-right">
-    <img [src]="sheet.author.profileImage">
+    <img [src]="sheet.author.profile_image">
   </div>
 
   <div class="ml-4">
