--- a/projects/viewer/src/modules/post/components/post-comment/post-comment.component.html
+++ b/projects/viewer/src/modules/post/components/post-comment/post-comment.component.html
@@ -17,20 +17,18 @@
 
 <div class="section comment" *ngFor="let comment of commentResult?.list" [id]="'comment-section-' + comment.comment_id">
   <div class="content">
-    <img [src]="comment.author.profileImage" class="profile-img">
+    <img [src]="comment.author.profile_image" class="profile-img">
 
     <ng-template [ngIf]="!modifyShow[comment.comment_id]">
-      <a class="float-right text-center like-btn" [class.active]="comment.myLike" (click)="like(comment)">
+      <a class="float-right text-center like-btn" [class.active]="comment.my_like" (click)="like(comment)">
         <i class="fal fa-thumbs-up"></i> {{comment.likes}}
       </a>
       <a [routerLink]="['/profile', comment.author.user_id]">
         <b> {{comment.author.name}} </b>
       </a>
 
-      <span *ngIf="comment.isViolation != 1" class="comment-content"
+      <span class="comment-content"
             [innerHtml]="comment.content"></span>
-      <span *ngIf="comment.isViolation == 1"
-            class="comment-content text-danger">Deleted</span>
     </ng-template>
 
     <ng-template [ngIf]="modifyShow[comment.comment_id]">
@@ -79,12 +77,12 @@
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
-  <div class="reply" *ngIf="comment.replyList && comment.replyList.length > 0">
-    <div class="section comment" *ngFor="let reply of comment.replyList" [id]="'comment-section-' + reply.comment_id">
-      <img [src]="reply.author.profileImage" class="profile-img">
+  <div class="reply" *ngIf="comment.reply_list && comment.reply_list.length > 0">
+    <div class="section comment" *ngFor="let reply of comment.reply_list" [id]="'comment-section-' + reply.comment_id">
+      <img [src]="reply.author.profile_image" class="profile-img">
       <div class="content">
         <ng-container *ngIf="!modifyShow[reply.comment_id]">
-          <a class="float-right text-center like-btn" [class.active]="reply.myLike" (click)="like(reply)">
+          <a class="float-right text-center like-btn" [class.active]="reply.my_like" (click)="like(reply)">
             <i class="fal fa-thumbs-up"></i> {{reply.likes}}
           </a>
           <a [routerLink]="['/profile', reply.author.id]">
