--- a/projects/viewer/src/modules/post/components/post-item-detail-header/post-item-detail-header.component.html
+++ b/projects/viewer/src/modules/post/components/post-item-detail-header/post-item-detail-header.component.html
@@ -1,5 +1,5 @@
 <div class="post-header">
-  <img *ngIf="!!post" [src]="post.author.profileImage">
+  <img *ngIf="!!post" [src]="post.author.profile_image">
   <div>
     <a><b>{{post.author.name}}</b></a>
     <!--<span app-level-icon [user]="post.author"></span>-->
