--- a/projects/viewer/src/modules/post/components/youtube-video-cell/youtube-video-cell.component.html
+++ b/projects/viewer/src/modules/post/components/youtube-video-cell/youtube-video-cell.component.html
@@ -4,7 +4,7 @@
     <i class="fal fa-thumbs-up" aria-hidden="true"></i>
     {{post.likes}}
   </div>
-  <img [src]="post.videoThumb?.replace('default', 'mqdefault')" alt="{{post.title}}">
+  <img [src]="post.video_thumb?.replace('default', 'mqdefault')" alt="{{post.title}}">
 </div>
 
 <div class="video-info">
