--- a/projects/viewer/src/app/components/artist-sheet/artist-sheet.component.html
+++ b/projects/viewer/src/app/components/artist-sheet/artist-sheet.component.html
@@ -2,7 +2,7 @@
 <mat-card>
   <mat-card-content>
     <mat-card-header>
-      <div mat-card-avatar [style.background-image]="'url(' + sheet.author.profileImage + ')'"></div>
+      <div mat-card-avatar [style.background-image]="'url(' + sheet.author.profile_image + ')'"></div>
       <mat-card-title class="font-weight-bold"> {{sheet.author.name}} </mat-card-title>
       <mat-card-subtitle> {{sheet.author.area}} </mat-card-subtitle>
     </mat-card-header>
