--- a/projects/viewer/src/modules/post/pages/post-write/video/post-video-write.component.html
+++ b/projects/viewer/src/modules/post/pages/post-write/video/post-video-write.component.html
@@ -17,7 +17,7 @@
           <div class="youtube-form">
             <input type="text" class="form-control"
                    placeholder="https://www.youtube.com/watch?v=..."
-                   [ngModel]="post.youtubeUrl" (ngModelChange)="onChangeYoutubeURL($event)">
+                   [ngModel]="post.youtube_url" (ngModelChange)="onChangeYoutubeURL($event)">
             <div class="youtube-thumbnail" *ngIf="currentYoutubeVideoId">
               <img [src]="'https://img.youtube.com/vi/' + currentYoutubeVideoId + '/mqdefault.jpg'">
             </div>
