feat(viewer): translate ko to en

--- a/projects/viewer/src/app/components/navbar/navbar.component.html
+++ b/projects/viewer/src/app/components/navbar/navbar.component.html
@@ -8,15 +8,15 @@
       <ul class="row main-menu flex-grow-1">
         <li routerLink="/board/video" routerLinkActive="active">
           <i class="fab fa-youtube"></i>
-          영상
+          Video
         </li>
         <li routerLink="/board/community" routerLinkActive="active">
           <i class="fa fa-users"></i>
-          커뮤니티
+          Community
         </li>
         <li routerLink="/board/sheet" routerLinkActive="active">
           <i class="fa fa-music"></i>
-          악보
+          Sheet Music
         </li>
         <li class="search">
           <div class="search-wrapper">
