feature(ionic-native-storage): support private key in app

--- a/projects/viewer/src/modules/post/pages/post-list/community/post-community.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/community/post-community.component.html
@@ -1,7 +1,7 @@
 <section class="post-list-section">
   <div class="row">
     <div class="tag-section">
-      <div class="tags-all font-weight-bold mb-2"> 태그 </div>
+      <div class="tags-all font-weight-bold mb-2"> Topic </div>
       <ul class="tags">
         <li *ngFor="let tag of tags">
           <a> {{tag}} </a>
