--- a/projects/prototype/src/modules/post/pages/post-list/music/post-music.component.html
+++ b/projects/prototype/src/modules/post/pages/post-list/music/post-music.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-3">
       <div class="bg-white bg-white tag-section border p-3">
-        <div class="tags-all font-weight-bold mb-2"> 태그 </div>
+        <div class="tags-all font-weight-bold mb-2"> Topic </div>
         <ul class="tags">
           <li *ngFor="let tag of tags">
             <a> {{tag.name}} </a>
