feature(hmr): support Hot Module Replacement

--- a/projects/prototype/src/modules/post/pages/post-list/post-list.scss
+++ b/projects/prototype/src/modules/post/pages/post-list/post-list.scss
@@ -17,7 +17,7 @@ ul.tags {
       transition: color 0.2s ease-in-out;
 
       &:hover {
-        color: #5bc0de;
+        color: #1ab394;
       }
     }
   }
