--- a/projects/viewer/src/app/pages/main/main.component.html
+++ b/projects/viewer/src/app/pages/main/main.component.html
@@ -12,7 +12,7 @@
         -->
 
         <div class="bg-secondary mt-3 p-4">
-          <h4 class="m-0"> 악보 </h4>
+          <h4 class="m-0"> Sheet Music </h4>
         </div>
 
         <div class="bg-white border border-bottom-0">
@@ -22,7 +22,7 @@
         </div>
 
         <div class="bg-secondary mt-3 p-4">
-          <h4 class="m-0"> 커뮤니티 </h4>
+          <h4 class="m-0"> Community </h4>
         </div>
 
         <div class="bg-white border border-bottom-0">
@@ -42,8 +42,8 @@
           </h4>
 
           <div class="text-center mt-4">
-            <button mat-button class="small"> 거래 내역 </button>
-            <button mat-button class="small"> 토큰 전송 </button>
+            <button mat-button class="small"> Transactions </button>
+            <button mat-button class="small"> Transfer MZK </button>
           </div>
         </div>
 
