--- a/projects/viewer/src/modules/post/pages/post-list/post-list.scss
+++ b/projects/viewer/src/modules/post/pages/post-list/post-list.scss
@@ -5,7 +5,7 @@
   margin-left: 15px;
   background: #2d343a;
   color: #fff;
-  padding: 12px;
+  padding: 20px;
 
   .tags-all {
     font-size: 1.4rem;
@@ -24,7 +24,7 @@
         transition: color 0.2s ease-in-out;
 
         &:hover {
-          color: #5bc0de;
+          color: #1ab394;
         }
       }
     }
