--- a/projects/viewer/src/modules/post/pages/post-list/video/post-video.component.scss
+++ b/projects/viewer/src/modules/post/pages/post-list/video/post-video.component.scss
@@ -13,17 +13,15 @@
 }
 
 .video-list {
-  padding: 16px;
+  max-width: 1070px;
+  margin: 0 auto;
+  padding: 48px 0;
 
   [app-youtube-video-cell] {
-    width: 23%;
-    margin-bottom: 4%;
-    margin-right: 2.6%;
-    float: left;
-
-    &:nth-child(4n) {
-      margin: 0;
-    }
+    margin-right: 1%;
+    display: inline-block;
+    width: 18%;
+    margin-bottom: 24px;
   }
 }
 
