--- a/projects/viewer/src/modules/post/pages/post-write/sheet/post-sheet-write.component.html
+++ b/projects/viewer/src/modules/post/pages/post-write/sheet/post-sheet-write.component.html
@@ -5,12 +5,36 @@
         <h5> Upload sheet music </h5>
 
         <div class="upload-form">
-          <label class="upload-btn" for="upload-sheet">
-            <input type="file" id="upload-sheet" class="upload-sheet d-none" name="upload-sheet">
+          <label class="upload-btn" for="upload-sheet" [class.disabled]="uploadStatus?.status === 'uploading'">
+            <input type="file" id="upload-sheet" class="upload-sheet d-none" name="upload-sheet"
+                   ngFileSelect [uploadInput]="uploadInput" (uploadOutput)="onUploadOutput($event)"
+                   [disabled]="uploadStatus?.status === 'uploading'">
             <span class="btn-text">
-              <i class="fa fa-file-pdf"></i> Select sheet music (PDF format)
+              Select sheet music (PDF format)
             </span>
           </label>
+
+          <div class="file-name" *ngIf="uploadStatus" [class.text-danger]="uploadStatus.status === 'failed'">
+            <i class="fa fa-file-pdf"></i> {{uploadStatus.fileName}}
+            <i class="fa fa-check text-success small" *ngIf="uploadStatus.status === 'done'"></i>
+            <i class="fa fas fa-circle-notch fa-spin"
+               *ngIf="uploadStatus.status === 'uploading' && uploadStatus.process === 'pending'"></i>
+
+            <ng-container *ngIf="uploadStatus.status === 'failed'">
+              <i class="fa fa-times text-danger small"></i> failed!
+            </ng-container>
+          </div>
+        </div>
+
+        <div class="progress upload-progress position-relative" *ngIf="uploadStatus">
+          <div class="progress-bar"
+               role="progressbar"
+               [attr.aria-valuenow]="uploadStatus.progress" aria-valuemin="0" aria-valuemax="100"
+               [style.width]="uploadStatus.progress + '%'">
+            <div style="position: absolute; left: 0; right: 0">
+              {{uploadStatus.progress}}%
+            </div>
+          </div>
         </div>
 
         <h5> Song type </h5>
