--- a/projects/prototype/src/modules/post/pages/post-list/free/post-free.component.html
+++ b/projects/prototype/src/modules/post/pages/post-list/free/post-free.component.html
@@ -15,10 +15,10 @@
         <table class="table">
           <thead>
           <tr>
-            <th> 제목 </th>
-            <th width="140"> 글쓴이 </th>
-            <th width="130"> 조회수 </th>
-            <th width="130"> 좋아요수 </th>
+            <th> Title </th>
+            <th width="140"> Author </th>
+            <th width="130"> Views </th>
+            <th width="130"> Likes </th>
           </tr>
           </thead>
           <tbody>
