--- a/projects/viewer/src/modules/post/pages/post-list/community/post-community.component.html
+++ b/projects/viewer/src/modules/post/pages/post-list/community/post-community.component.html
@@ -18,8 +18,8 @@
           <table class="table">
             <thead>
             <tr>
-              <th> 제목 </th>
-              <th width="140"> 글쓴이 </th>
+              <th> Title </th>
+              <th width="140"> Author </th>
               <th width="130"> <i class="fa fa-eye font-weight-light"></i> </th>
               <th width="130"> <i class="fa fa-thumbs-up font-weight-light"></i> </th>
             </tr>
