style(viewer): rename music section

--- a/projects/viewer/src/app/components/navbar/navbar.component.html
+++ b/projects/viewer/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
         </li>
         <li routerLink="/board/sheet" routerLinkActive="active">
           <i class="fa fa-music"></i>
-          Sheet Music
+          Music
         </li>
         <li class="search">
           <div class="search-wrapper">
