refactor(navbar): set btn-color more visible pattern

--- a/projects/prototype/src/app/component/navbar/navbar.component.html
+++ b/projects/prototype/src/app/component/navbar/navbar.component.html
@@ -25,7 +25,7 @@
         <div class="ml-auto pr-4">
           <!-- @TODO Allowed other wallets (now only support metamask) -->
           <button mat-raised-button color="primary" (click)="login()">
-            로그인
+            Login
           </button>
         </div>
       </ng-template>
