--- a/projects/viewer/src/app/components/navbar/navbar.component.html
+++ b/projects/viewer/src/app/components/navbar/navbar.component.html
@@ -47,9 +47,8 @@
 
       <ng-template #loggedInBlock>
         <div class="ml-auto pr-4">
-          <!-- @TODO Allowed other wallets (now only support metamask) -->
-          <a mat-button color="white" routerLink="/login">
-            로그인
+          <a class="btn-login" routerLink="/login">
+            Login
           </a>
         </div>
       </ng-template>
