--- a/projects/viewer/src/app/app.component.html
+++ b/projects/viewer/src/app/app.component.html
@@ -1,6 +1,17 @@
-<app-navbar></app-navbar>
-
-<div class="main-content">
-  <router-outlet></router-outlet>
+<div class="apps">
+  <muzika-apps (onTabChange)="currentTab=$event"></muzika-apps>
 </div>
 
+<div class="app-container h-100" [class.d-none]="currentTab !== 'viewer'">
+  <app-navbar></app-navbar>
+
+  <div class="main-content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
+<div class="app-container h-100" [class.d-none]="currentTab !== 'wallet'">
+  <div class="main-content">
+    <router-outlet name="wallet"></router-outlet>
+  </div>
+</div>
