--- a/projects/viewer/src/app/app.component.scss
+++ b/projects/viewer/src/app/app.component.scss
@@ -3,7 +3,7 @@
 :host {
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   height: 100vh;
   width: 100vw;
   background-color: $background-color;
@@ -14,4 +14,14 @@
   flex-grow: 1;
   overflow-y: auto;
   overflow-x: hidden;
+}
+
+.app-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.apps {
+  width: 85px;
 }
