--- a/projects/viewer/src/app/components/navbar/navbar.component.html
+++ b/projects/viewer/src/app/components/navbar/navbar.component.html
@@ -43,6 +43,11 @@
             {{currentUser.address | slice:0:8}}...{{currentUser.address | slice:-6}}
           </div>
         </div>
+        <div class="pl-3">
+          <a class="text-white" style="cursor: pointer" (click)="logout()">
+            <i class="fa fa-sign-out"></i>
+          </a>
+        </div>
       </ng-container>
 
       <ng-template #loggedInBlock>
