--- a/projects/viewer/src/app/components/muzika-apps/muzika-apps.component.html
+++ b/projects/viewer/src/app/components/muzika-apps/muzika-apps.component.html
@@ -8,4 +8,8 @@
     Wallet
     <span class="unread"> 3 </span>
   </li>
+  <li [class.active]="currentTab === 'floating-wallet'" (click)="changeTab('floating-wallet')">
+    <i class="fas fa-desktop-alt" style="display: block;font-size: 40px;"></i>
+    Floating Wallet
+  </li>
 </ul>
