--- a/projects/viewer/src/app/app.component.scss
+++ b/projects/viewer/src/app/app.component.scss
@@ -9,18 +9,70 @@
   background-color: $background-color;
 }
 
-.main-content {
-  height: 100%;
-  flex-grow: 1;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
 .app-container {
+  position: relative;
   flex: 1;
   display: flex;
   flex-direction: column;
+
+  .main-content {
+    height: 100%;
+    flex-grow: 1;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
+  .backdrop {
+    background: rgba(0, 0, 0, 0);
+    transition: background ease 0.3s;
+  }
+
+  &.wallet {
+    app-navbar {
+      display: none;
+    }
+
+    .main-content {
+      display: none;
+    }
+
+    .wallet-content {
+      height: 100%;
+      flex-grow: 1;
+      overflow-y: auto;
+      overflow-x: hidden;
+    }
+  }
+
+  &.viewer {
+    .wallet-content {
+      display: none;
+    }
+  }
+
+  &.floating-wallet {
+    .wallet-content {
+      background: rgba(255, 255, 255, .95);
+      border: 1px solid black;
+      border-radius: 5px 5px;
+      width: 80%;
+      height: 80%;
+      position: absolute;
+      left: 10%;
+      top: 10%;
+    }
+
+    .backdrop {
+      background: rgba(0,0,0, .8);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+  }
 }
+
 
 .apps {
   width: 85px;
