--- a/projects/viewer/src/app/app.component.html
+++ b/projects/viewer/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="apps">
-  <muzika-apps (tabChange)="currentTab=$event"></muzika-apps>
+  <muzika-apps></muzika-apps>
 </div>
 
 <div class="app-container h-100" [(ngClass)]="currentTab">
@@ -10,6 +10,7 @@
   </div>
   <div class="backdrop"></div>
   <div class="wallet-content">
+    <span class="floating-close" (click)="closeFloating()"> <i class="fa fa-times"></i> </span>
     <router-outlet name="wallet"></router-outlet>
   </div>
 </div>
