--- a/projects/viewer/src/app/pages/login/login.component.html
+++ b/projects/viewer/src/app/pages/login/login.component.html
@@ -1,3 +1,4 @@
+<!--
 <div class="jumbotron">
   <h2>
     Welcome to Muzika
@@ -55,4 +56,15 @@
 
     </div>
   </div>
+</div>
+-->
+
+<div class="select-account">
+  <h2> Select your account </h2>
+  <select class="form-control mt-3" id="account" name="account" [(ngModel)]="selectedAccount">
+    <option *ngFor="let account of accounts" [value]="account">
+      {{account}}
+    </option>
+  </select>
+  <button type="button" class="btn btn-primary mt-3" (click)="login()"> Login </button>
 </div>
