feat(ipfs-test): add page

--- a/projects/viewer/src/app/app.component.html
+++ b/projects/viewer/src/app/app.component.html
@@ -13,4 +13,7 @@
     <span class="floating-close" (click)="closeFloating()"> <i class="fa fa-times"></i> </span>
     <router-outlet name="wallet"></router-outlet>
   </div>
+  <div class="ipfs-content">
+    <app-ipfs-test></app-ipfs-test>
+  </div>
 </div>
