--- a/projects/viewer/src/modules/wallet/pages/wallet-list/wallet-list.component.scss
+++ b/projects/viewer/src/modules/wallet/pages/wallet-list/wallet-list.component.scss
@@ -62,3 +62,22 @@
     width: 80%;
   }
 }
+
+.table {
+  table-layout: fixed;
+
+  td {
+    white-space: nowrap;
+    word-break: break-all;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    a {
+      color: blue;
+
+      &:hover {
+        color: darkblue;
+      }
+    }
+  }
+}
