--- a/projects/viewer/src/app/app.component.scss
+++ b/projects/viewer/src/app/app.component.scss
@@ -15,14 +15,14 @@
   display: flex;
   flex-direction: column;
 
-  &:not(.viewer) {
+  &:not(.viewer):not(.floating-wallet) {
     app-navbar,
     .main-content {
       display: none;
     }
   }
 
-  &:not(.wallet) {
+  &:not(.wallet):not(.floating-wallet) {
     .wallet-content {
       display: none;
     }
