--- a/projects/viewer/src/app/pages/main/main.component.html
+++ b/projects/viewer/src/app/pages/main/main.component.html
@@ -35,10 +35,10 @@
       <div class="col pl-0">
         <div class="mt-3 py-4 px-4 bg-primary">
           <h3 class="text-center">
-            20,000 <small> MZK </small>
+            {{balances.mzk | number}} <small> MZK </small>
           </h3>
           <h4 class="text-center">
-            210,301 <small> LP </small>
+            {{balances.dollar | number}} <small> LP </small>
           </h4>
 
           <div class="text-center mt-4">
