feat(wallet): add function that can import wallet from `private key` TODO: Support other method to import wallet

--- a/projects/viewer/src/modules/wallet/pages/wallet-list/wallet-list.component.html
+++ b/projects/viewer/src/modules/wallet/pages/wallet-list/wallet-list.component.html
@@ -30,7 +30,7 @@
       <button type="button" class="btn btn-dark" (click)="createWallet()">
         <i class="fa fa-plus-square" style="margin-right: 4px;"></i> Create wallet
       </button>
-      <button type="button" class="btn btn-dark">
+      <button type="button" class="btn btn-dark" (click)="importWallet()">
         <i class="fa fa-upload" style="margin-right: 4px;"></i> Import wallet
       </button>
     </div>
